[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ibmsecurity"
version = "2025.3.28.0"
authors = [
  { name="IBM", email="secorch@wwpdl.vnet.ibm.com" },
]
description = "Idempotent functions for IBM Security Appliance REST APIs"
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools"
]
dependencies = [
    "requests",
    "jmespath>=1.0.0",
    "PyYAML"
]

[project.urls]
"Homepage" = "https://github.com/IBM-Security/ibmsecurity"
"Bug Tracker" = "https://github.com/IBM-Security/ibmsecurity/issues"
